# kuibu

./: .gitignore  CMakeLists.txt  README.md
cmake/: InstallFltk.cmake
doc/fltk/: basics.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt  algorithm.cppm  config.cppm.in  random.cppm
src/picos/: CMakeLists.txt  README.md  main.cpp
src/tic_tac_toe/: CMakeLists.txt  main.cpp
